<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relay"
        android:layout_width="292dp"
        android:layout_height="356dp"
        android:background="@drawable/text_background2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cancel_icon"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/cancel"
            android:fadingEdgeLength="4dp"
            app:srcCompat="@drawable/cancel_24" />


        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/question"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/q_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/question"
            android:text="@string/question_mark"
            android:textSize="48sp"
            tools:ignore="RelativeOverlap" />


        <Button
            android:id="@+id/yes_button"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            android:layout_marginBottom="60dp"
            android:background="@drawable/text_background3"
            android:text="@string/yes_button_text"
            android:textColor="@color/colorYellow" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>