<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".ui.main.SubmissionPageFragment">
        <LinearLayout
            android:id="@+id/inner_linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:autofillHints="@string/first_name_hint"
                android:background="@drawable/text_background"
                android:hint="@string/first_name_hint"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/last_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:autofillHints="@string/last_name_hint"
                android:background="@drawable/text_background"
                android:hint="@string/last_name_hint"
                android:inputType="textCapWords" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email_address_hint"
                android:background="@drawable/text_background"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toTopOf="@+id/github_link_tv"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/github_link_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/github_hint"
                android:background="@drawable/text_background"
                android:hint="@string/github_hint"
                android:inputType="textWebEmailAddress"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toTopOf="@+id/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_address_tv" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/submit_button"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/design_default_color_background"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/github_link_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
